fix horizontal overflow on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,10 @@
 /* General */
 html, body {
   height:100%;
+  margin: 0;
   padding:0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
